--- a/Geolocation.html
+++ b/Geolocation.html
@@ -5,45 +5,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Geolocation</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@900&display=swap" rel="stylesheet">
   <style>
     #mapContainer {
       position: relative;
-      padding: 100px;
+      padding-left: 100px;
+      padding-right: 100px;
       height: 60%;
-    }
-
-    #mapCanvas {
-      border: 2px solid #000;
-      border-radius: 10px;
     }
 
   body{
     height: 100vh;
+    background-color: #f7b596;
   }
+  h1{
+    font-family: 'Vollkorn', serif;
+  }
+  button {
+    padding: 12px 24px;
+    background-color: #2a6103;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
   </style>
 </head>
 
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+  crossorigin="anonymous"></script>
+  <br>
   <header>
     <center>
-      <h1 style="font-family: 'Klee One'; font-weight: bold;">City Exploration Web App</h1>
+      <h1>City Exploration</h1>
     </center>
   </header>
 
-  <button onclick="getLocation()"
-    style="font-family: 'Klee One'; font-weight: bold; border: 2px double black; width: 150px;">Get My Location</button>
-  <br><br><br>
-  <div id="locationDisplay" style="font-family: 'Klee One'; font-weight: bold; margin-top: 10px;">
+  
+    <div class="col-md-12 text-center">
+    <button type="button" class="btn btn-primary" onclick="getLocation()">Get My Location</button>
+  </div>
+  <br><br>
+  <div class="col-md-12 text-center">
+  <div id="locationDisplay" style="font-family: 'Klee One'; font-weight: bold; margin-top: 10px; font-size: 30px;">
     Latitude: <span id="latitude"></span>, Longitude: <span id="longitude"></span>
   </div>
+</div>
+  <br><br>
   <div id="mapContainer" style="display: flex; justify-content: center;">
     <div id="bingMap" style="width: 100%; height: 100%;"></div>
   
   </div>
   
   <script>
-    var canvas = document.getElementById("mapCanvas");
-    var ctx = canvas.getContext("2d");
     var map = null;
 
     function getLocation() {
@@ -59,15 +79,6 @@
         credentials: "AgP7IEiadhp53XEHwpZhWfZUq13QAyjovlBeiIa_VW7eNwhyoEJkV29nhZK3Ga4X"
       });
     }
-
-     function getLocation() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(locateSuccess, locateFail);
-      } else {
-        alert("Geolocation is not supported by this browser.");
-      }
-    }
-
     function locateSuccess(position) {
       var latitude = position.coords.latitude;
       var longitude = position.coords.longitude;
@@ -79,13 +90,12 @@
       var center = new Microsoft.Maps.Location(latitude, longitude);
       map.setView({ center: center, zoom: 15 });
 
-      // Update location display
       var latitudeDisplay = document.getElementById("latitude");
       var longitudeDisplay = document.getElementById("longitude");
+
       latitudeDisplay.textContent = latitude.toFixed(6);
       longitudeDisplay.textContent = longitude.toFixed(6);
 
-      // Add a pushpin and label to Bing map
       var userLocation = new Microsoft.Maps.Pushpin(center, { color: 'blue' });
       map.entities.push(userLocation);
 
@@ -102,5 +112,7 @@
     };
   </script>
   <script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?callback=loadMap" async defer></script>
+</body>
+</html>
 </body>
 </html>
